 - Fix for bug 101 (onjoin bot crash when only one bot defined) (M)
 - Change misnamed is_pub_chan check to is_priv_chan (M)
 - Cycle MONCHANS option (F)
 - New Option to also scan channel messages (F)
 - New Set option to specify how many interval for monbots to cycle channels if enabled (F)
 - MonBots will now Join/Part Monchans as they become active on the network (F)


1.0 - Fish (F) and Mark (M) - 22 Aug, 2003
 - Fixed a problem with users signing off while NeoStats was still booting. (F)
 - Fixed a typo in help set (BugID #42) (F)
 - Fixed a problem with Exclude lists not being saved after a delete (BugID #41) (F)
 - HTTP agent wasn't reporting correct version to website (F)
 - Update segv code (M/F)
 - Cleaned up help text and reformatted help to match the rest of NeoStats (M)
 - Cleaned up old includes of <fnmatch.h> (M)
 - Changed to use new module export API (M)
 - Added missing NULL checks for finduser results to avoid referencing NULL pointers (M)
 - Renamed output module to secureserv to fix load/unload issues (M)
 - Don't do onjoin checks for channels monitored via a monbot (F)
 - Don't lock a channel when its already locked (BugID: 45) (F)
 - Fixed missing fclose call in load_dat (M)
 - Added support for customviri.dat to allow local defintions that are not affected by viri.dat updates (M)
 - A check to see if we have bots for Onjoin Checking. Fix |VIO|Maveric problem (F)
 - Changed SET LIST to output setting names rather than descriptions (M)
 - SecureServ will log positives and the action taken (M)
 - Added RELOAD command to allow reloading of viri.dat and customviri.dat without restart (M)
 - Fixed problem with pcre rebuilding tables when not necessary (M)
 - Added BOTECHO option so onjoin bots can echo all PMs without the other info that verbose on reports (M)
 - Ported to new optimised buffer safe string functions (M)
 - Only compile in pcre if its not contained in NeoStats Core (F)